# Windows-Auto-Clicker

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql-analysis.yml
autohotkey/Rapid/: RapidFire.ahk
